--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-It is a simple MVC framework I am developing.  The language is php 5.3. 
+This file is used in Drupal 7 for registering a domain and/or manipulating domain's data.
